--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -5,6 +5,25 @@ span.wpo-warning {
 	padding: 5px 15px;
 	background-color: white;
 }
+
+span.wpo-info {
+	display: inline-block;
+	padding: 0.6em 1.3em;
+	margin-bottom: 1em;
+	background: #f6f7f7;
+	border: 1px solid #e3e3e3;
+	border-radius: 6px;
+}
+
+a.button.wpo-button {
+	padding: 0.6em 1.3em;
+	margin: 0 1em 1em 0;
+	background: #f6f7f7;
+	border-radius: 6px;
+	font-size: 1em;
+	line-height: 1.5;
+}
+
 .wcpdf-extensions-ad,
 .wcpdf-promo-ad {
 	position: relative;
@@ -1275,12 +1294,12 @@ div.upgrade-table-description a,
 	#upgrade-table td.feature-label span.description {
 		display: none;
 	}
-	
+
 	#upgrade-table th:not(.last),
 	#upgrade-table td:not(.last) {
 		width: 20%;
 	}
-	
+
 	#upgrade-table td.first {
 		width: 40%;
 	}
