--- a/templates/Simple/style.css
+++ b/templates/Simple/style.css
@@ -45,7 +45,7 @@ ul {
 }
 
 li {
-	margin-bottom: 0.75em;
+	margin: 0;
 }
 
 p {
@@ -224,8 +224,9 @@ table.notes-totals {
 }
 
 /* item meta formatting */
-.item-meta {
-	margin: 8px 0 0 0;
+.item-meta,
+.meta {
+	margin: 4px 0 0 0;
 	font-size: 7pt;
 	line-height: 7pt;
 	overflow-wrap: anywhere;
@@ -236,11 +237,6 @@ table.notes-totals {
 	margin: 0;
 }
 
-.wc-item-meta li {
-	margin-top: 4px;
-	margin-left: 0;
-}
-
 .wc-item-meta li p,
 .wc-item-meta li dd {
 	display: inline;
@@ -248,9 +244,9 @@ table.notes-totals {
 
 .wc-item-meta p,
 .wc-item-meta dd,
-.item-meta p {
-	margin-top: 4px;
-	margin-left: 0;
+.item-meta p,
+.meta p {
+	margin: 0;
 }
 
 /* Notes & Totals */
