--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -578,7 +578,7 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	padding-right: 5%;
 }
 
-.preview-document .preview > #preview-ubl {
+.preview-document .preview > #preview-xml {
 	width: 100%;
 	height: 100%;
 	overflow-wrap: anywhere;
