--- a/templates/Simple/style.css
+++ b/templates/Simple/style.css
@@ -45,7 +45,7 @@ ul {
 }
 
 li {
-	margin: 0;
+	margin-bottom: 0.75em;
 }
 
 p {
@@ -173,7 +173,7 @@ td.order-data table th {
 table.order-details,
 table.notes-totals {
 	width: 100%;
-	margin-bottom: 0;
+	margin-bottom: 8mm;
 	page-break-before: avoid;
 }
 
@@ -224,9 +224,8 @@ table.notes-totals {
 }
 
 /* item meta formatting */
-.item-meta,
-.meta {
-	margin: 4px 0 0 0;
+.item-meta {
+	margin: 8px 0 0 0;
 	font-size: 7pt;
 	line-height: 7pt;
 	overflow-wrap: anywhere;
@@ -237,6 +236,11 @@ table.notes-totals {
 	margin: 0;
 }
 
+.wc-item-meta li {
+	margin-top: 4px;
+	margin-left: 0;
+}
+
 .wc-item-meta li p,
 .wc-item-meta li dd {
 	display: inline;
@@ -244,9 +248,9 @@ table.notes-totals {
 
 .wc-item-meta p,
 .wc-item-meta dd,
-.item-meta p,
-.meta p {
-	margin: 0;
+.item-meta p {
+	margin-top: 4px;
+	margin-left: 0;
 }
 
 /* Notes & Totals */
@@ -258,7 +262,7 @@ table.notes-totals {
 
 table.totals {
 	width: 100%;
-	margin-top: 0;
+	margin-top: 5mm;
 	table-layout: fixed;
 }
 
@@ -267,12 +271,6 @@ table.totals td {
 	border: 0;
 	border-top: 1px solid #ccc;
 	border-bottom: 1px solid #ccc;
-}
-
-table.totals tr:nth-child(1) th,
-table.totals tr:nth-child(1) td {
-	border-top: 0;
-	border-bottom: 0;
 }
 
 table.totals th.description,
