--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -393,6 +393,12 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	padding-top: 0.7em;
 }
 
+#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td p.description > span.wpo-warning {
+	width: 100%;
+	box-sizing: border-box;
+	word-wrap: break-word;
+}
+
 #wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td > input[type="text"],
 #wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td > input[type="url"],
 #wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td > select,
