--- a/templates/Simple/style.css
+++ b/templates/Simple/style.css
@@ -115,6 +115,7 @@ table.head {
 td.header img {
 	max-height: 3cm; /* may be overridden by the settings */
 	width: auto;
+	max-width: 100%;
 }
 
 /* .mpdf td.header img { */
